--- a/memraptor.html
+++ b/memraptor.html
@@ -11,7 +11,7 @@
     while(true){
         let v = document.createElement("p");
         let s = document.querySelectorAll("p");
-        s.innerText="Seu bobão "+c+"x";
+        s.innerText="?"+c+"x";
         c++;
     }
   </script>
