--- a/memraptor.html
+++ b/memraptor.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Carregando...</title>
   </head>
   <body>
   </body>
